--- a/public/css/issues.styl
+++ b/public/css/issues.styl
@@ -70,6 +70,9 @@
 	.voteStuff
 		display flex
 		
+	.sideContainer
+		display flex
+		
 	/*
      * Arrow Container: Arrows
      *
